/*
 * $Id: ChangeLog,v 1.2240 2004/02/07 21:20:21 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-08 01:25 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * include\hbapi.h
  * source\rdd\dbfntx\dbfntx1.c
  * source\rdd\dbf1.c
  * source\rtl\round.c
  * source\vm|itemapi.c
    ! Improvement in the algorithm of round.
    ! INT() now return an integer number.
    ! ROUND() now return an integer when nDec is equal o greather than 0.

2004-02-08 04:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtnul/gtnul.c
    * function prototype declaration for hb_gtFindNoNul()

2004-02-08 03:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtstd/gtstd.c
    + add dummy functions for clipboard thingies

2004-02-08 03:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/harbour.c
    * remove unused variable

  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtwin/gtwin.c
    * remmed unused variables

  * source/rtl/gtapi.c
    * void unused parameter

2004-02-08 01:13 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/include/inkey.ch
    + #define K_MBUTTONDOWN           1008   // Middle Button Down
    + #define K_MBUTTONUP             1009   // Middle Button Up
    + #define K_MDBLCLK               1010   // Middle Button Double Click
    + #define K_MMLEFTDOWN            1011   // Mouse Move Left Down
    + #define K_MMRIGHTDOWN           1012   // Mouse Move Right Down
    + #define K_MMMIDDLEDOWN          1013   // Mouse Move Middle Down
    + #define K_MWFORWARD             1014   // Mouse Wheel Forward
    + #define K_MWBACKWARD            1015   // Mouse Wheel Backward
 
  * xharbour/source/rtl/gtwvt/gtwvt.c
    ! Updated to support above Inkey() constants.

2004-02-02 11:00 UTC-0300 Luiz Rafael Culik Guimares <culikr@brturbo.com>
  * contrib/tip/tipclient.prg