@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2240 2004/02/07 21:20:21 andijahja Exp $
+ * $Id: ChangeLog,v 1.2241 2004/02/08 04:36:11 walito Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-02-08 13:04 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/rtl/gtapi.c
+    ! removed extra chr(0) character when pasting shorter clipboard
+      on an already existing variable.
+   * source/rtl/gtstd/gtstd.c
+    + Added clipboard support (I just forgot to add them to this files),
+      removing dummy funcs from Andi (thanks for having pointed it out).
 
 2004-02-08 01:25 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * include\hbapi.h
